@@ -705,6 +705,7 @@ create_startup()
 					echo "svscan startup enabled in systemd /lib/systemd/system/svscan.service"
 				fi
 				/bin/cp "$DESTDIR"$shareddir/boot/systemd /lib/systemd/system/svscan.service
+      			/bin/systemctl daemon-reload && echo "installed new svscan service"
 			fi
 		elif [ -x /bin/systemctl -a -d /usr/lib/systemd/system ] ; then
     		cmp -s "$DESTDIR"$shareddir/boot/systemd /usr/lib/systemd/system/svscan.service >/dev/null 2>&1
@@ -713,6 +714,7 @@ create_startup()
 					echo "svscan startup enabled in systemd /usr/lib/systemd/system/svscan.service"
 				fi
 				/bin/cp "$DESTDIR"$shareddir/boot/systemd /usr/lib/systemd/system/svscan.service
+      			/bin/systemctl daemon-reload && echo "installed new svscan service"
 			fi
 		elif [ -f /sbin/initctl -a -d /etc/init ] ; then
     		cmp -s "$DESTDIR"$shareddir/boot/upstart /etc/init/svscan.conf >/dev/null 2>&1
@@ -784,10 +786,12 @@ remove_startup()
 		/bin/systemctl stop svscan
 		/bin/systemctl disable svscan.service
 		/bin/rm -f /lib/systemd/system/svscan.service
+      	/bin/systemctl daemon-reload && echo "removed svscan service"
 	elif [ -f /usr/lib/systemd/system/svscan.service -a -x /bin/systemctl ] ; then
 		/bin/systemctl stop svscan
 		/bin/systemctl disable svscan.service
 		/bin/rm -f /usr/lib/systemd/system/svscan
+      	/bin/systemctl daemon-reload && echo "removed svscan service"
 	elif [ -f /etc/init/svscan.conf ] ; then
 		/sbin/initctl emit qmailstop > /dev/null
 		/bin/rm -f /etc/event.d/svscan
