@@ -58,7 +58,7 @@ Release 2.13 Start 14/02/2021
 34. rennamed qmail-deliver to qmail-direct
 35. remove zero bytes package_name-stat.override file
 36. fixed syntax error getting HOSTNAME
-01/05/2021
+- 01/05/2021
 37. qmail-direct.c: removed uidinit() and auto_uids to run on a minimal
     system.
 38. qmail-direct.c: use modified Maildir as the queue directory and eliminate
@@ -66,6 +66,8 @@ Release 2.13 Start 14/02/2021
 39. qmail-direct.c: use standard Maildir for queue operation
 40. qmail-direct.c: removed control file direct_mail_users
 41. qmail-direct.c: fixed mess, intd filenames
+- 03/05/2021
+42. do systemctl daemon-reload after installing/removing svscan service
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 2.12 Start 21/05/2020
