@@ -30,6 +30,8 @@ Release 1.1 Start 27/02/2021
 16. minisvc - allow --force to override norefreshsvc flag for a service
 - 30/04/2021
 17. remove zero bytes package_name-stat.override file
+- 03/05/2021
+18. do systemctl daemon-reload after installing/removing svscan service
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
